# AutoFFI

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: embed_files.cmake
slides/: env.lua  midterm.md  pandoc-template.tex  report.md  slides.md
src/: AutoFFI.cpp  CMakeLists.txt  Config.def  Config.h  Driver.cpp  Driver.h  Entity.h  Function.h  HaskellCodeGen.cpp  HaskellCodeGen.h  Marshaller.cpp  Marshaller.h  MatcherWrapper.h  Module.cpp  Module.h  OpaqueType.h  PointerType.h  PrimTypes.cpp  PrimTypes.def  PrimTypes.h  Tag.h  Types.cpp  Types.def  Types.h  VisitTypes.cpp  VisitTypes.h  YAML.h  config.cpp  config.def  config.h  default_template.hs  driver.cpp  driver.h  function_type.h  haskell_code_gen.cpp  haskell_code_gen.h  inja_callback.h  json.cpp  json.h  main.cpp  (+17 more)
